--- a/nx_pyvis_tests/week1.ipynb
+++ b/nx_pyvis_tests/week1.ipynb
@@ -190,6 +190,31 @@
     "\"\"\")\n",
     "net.show('graph.html')    # save visualization in 'graph.html'"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Microgrid Formation\n",
+    "\n",
+    "In the modern grid, the line between consumer and producer is blurred due to distributed generation (solar and wind) and distributed storage (home batteries and EVs). \n",
+    "\n",
+    "Maximize *modularity* to detect $K$ self-sufficient communities labeled by $l$.\n",
+    "\n",
+    "$$\\max \\frac1{2m} \\sum_{i,j} \\left(A_{ij}-\\frac{k_ik_j}{2m}\\right) \\sum_l x_{i,l}x_{j,l}$$\n",
+    "where $A_{ij}$ is adjacency matrix, $k_i=\\sum_j A_{ij}$, $m_i=\\frac12 \\sum_i k_i$.\n",
+    "\n",
+    "Dynamically compute $A_{ij}$ based on instantaneous load and production. Nodes have \"power consumption values\" $p_i$ signifying how  much power they consume.\n",
+    "\n",
+    "Self-reliance is formulated as $$\\min_x \\frac{\\lambda}{\\mathcal{P}}\\sum_l$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
