--- a/nx_pyvis_tests/week1.ipynb
+++ b/nx_pyvis_tests/week1.ipynb
@@ -24,6 +24,9 @@
     "- different symbols for various types of nodes:\n",
     "  - solar, wind, hydro, nuclear, battery storage, \n",
     "    consumer vs. corporation, distributed system\n",
+    "- edges: \n",
+    "  1. transmission line\n",
+    "  1. transformer\n",
     "- color / bound microgrids together?\n",
     "- add a map of the city to the background?\n",
     "- color code the edges based on how much voltage?\n",
@@ -161,9 +164,9 @@
     "# add nodes\n",
     "net.add_nodes(\n",
     "    # node ids\n",
-    "    [1, 2, 3, 4, 5],  \n",
+    "    [1, 2, 3, 4, 5], \n",
     "    # node values (store as vertices)\n",
-    "    value=[10, 20, 30, 40, 50],  \n",
+    "    value=[10, 20, 30, 40, 50], \n",
     "    x=[1,3,6,2,8],  # x-coordinates of nodes\n",
     "    y=[0,3,1,0,2],  # y-coordinates of nodes\n",
     "    # node labels on graph\n",
@@ -197,16 +200,22 @@
    "source": [
     "## Microgrid Formation\n",
     "\n",
-    "In the modern grid, the line between consumer and producer is blurred due to distributed generation (solar and wind) and distributed storage (home batteries and EVs). \n",
+    "In the modern grid, the line between consumer and producer is blurred due to consumers that have distributed generation and storage resources, so to graph an electrical grid we will call the nodes **prosumers**. Some areas with a significant amount of local distributed resources are able to be self-sufficient, and it can be in their interest to form a **microgrid** that is managed independently from the central grid.\n",
     "\n",
-    "Maximize *modularity* to detect $K$ self-sufficient communities labeled by $l$.\n",
+    "We want to identify $K$ self-sufficient microgrid communities indexed by $l$. In order to do so, we must both maximize *modularity*, the degree to which microgrids are more connected to themselves than to other microgrids, and *self-reliance*, how well supply matches demand within all microgrids. \n",
     "\n",
-    "$$\\max \\frac1{2m} \\sum_{i,j} \\left(A_{ij}-\\frac{k_ik_j}{2m}\\right) \\sum_l x_{i,l}x_{j,l}$$\n",
+    "The modularity of a network is defined as\n",
+    "\n",
+    "$$\\mathcal{M} = \\frac1{2m} \\sum_{i,j} \\left(A_{ij}-\\frac{k_ik_j}{2m}\\right) \\sum_l x_{i,l}x_{j,l}$$\n",
     "where $A_{ij}$ is adjacency matrix, $k_i=\\sum_j A_{ij}$, $m_i=\\frac12 \\sum_i k_i$.\n",
     "\n",
     "Dynamically compute $A_{ij}$ based on instantaneous load and production. Nodes have \"power consumption values\" $p_i$ signifying how  much power they consume.\n",
     "\n",
-    "Self-reliance is formulated as $$\\min_x \\frac{\\lambda}{\\mathcal{P}}\\sum_l$$"
+    "To optimize for self-sufficiency, we minimize a constraint that makes the sum of the power produced and consumed equal: $$\\min_x \\frac{\\lambda}{\\mathcal{P}}\\sum_l\\left(p_i x_{i,l}\\right)^2$$\n",
+    "\n",
+    "To determine $K$, we can classically apply the [Leiden algorithm](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6435756/) to partition the network into microgrids. This is an NP-hard algorithm that runs in exponential time. We can instead encode the problem \n",
+    "When formulating this problem on a quantum computer using QUBO, we can optimize on all nodes directly. \n",
+    "Alternatively, we can optimize the entire grid"
    ]
   },
   {
