--- a/notebooks/microgrids.ipynb
+++ b/notebooks/microgrids.ipynb
@@ -13,34 +13,37 @@
     "The following derivation is found in [Community Detection in Electrical Grids Using Quantum Annealing (2021)](https://arxiv.org/abs/2112.08300) and formulated in section 3 of [Quantum Optimization for the Future Energy Grid: Summary and Quantum Utility Prospects (2024)](https://arxiv.org/abs/2403.17495).\n",
     "\n",
     "\n",
-    "The modularity of a network is defined as\n",
+    "We want to maximize the modularity of a network, defined as\n",
     "\n",
     "$$\\mathcal{M} = \\frac1{2m} \\sum_{i,j} \\left(A_{ij}-\\frac{k_ik_j}{2m}\\right) \\sum_l x_{i,l}x_{j,l}$$\n",
     "where $A_{ij}$ is adjacency matrix, $k_i=\\sum_j A_{ij}$ is the sum of all edge weights from node $i$, $m=\\frac12 \\sum_i k_i=\\frac12 \\sum_i\\sum_j A_{ij}=\\sum_{i\\neq j} A_{ij}$ is the sum of all edge weights.\n",
     "\n",
     "The weights $A_{ij}$ are computed based on load and production to form microgrids. Each node has a \"power consumption value\" $p_i$ signifying how much power it produces to (+) or consumes from (-) the grid.\n",
     "\n",
-    "To optimize self-sufficiency, we want the sum of the power produced and consumed to be equal: \n",
-    "$$\\min_x \\frac{\\lambda}{\\mathcal{P}}\\sum_l\\left(p_i x_{i,l}\\right)^2$$\n",
-    "where each node $x_{i,l}$ is weighted by its \"power consumption value\" $p_i$ signifying how much power it produces to (+) or consumes from (-) the grid. \n",
+    "To optimize self-sufficiency, we want the power produced to be equal to the power consumed within each microgrid, equivalent to minimizing \n",
+    "$$\\mathcal{S} = \\frac{1}{\\mathcal{P}}\\sum_l\\left(\\sum_i p_i x_{i,l}\\right)^2$$\n",
     "\n",
-    "The problem involves  $K$, we can classically apply the [Leiden algorithm](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6435756/) to partition the network into microgrids. This is an NP-hard algorithm that runs in exponential time. We can instead encode the problem \n",
-    "When formulating this problem on a quantum computer using QUBO, we can optimize on all nodes directly. \n",
-    "Alternatively, we can optimize the entire grid using a binary-greedy method. \n",
+    "where $\\mathcal{P}$ is a normalization constant, let's say $\\max_i (p_i)^2$. \n",
     "\n",
-    "To do this, we continuously partition the grid into $K=2$ groups. This allows us to use just a single binary variable for each node $x_{i}$ representing one of two groups, and reduce the sum over $l$ in $\\mathcal{M}$."
+    "In full, the optimization problem involves minimizing the following objective function over $KN$ variables $x_{i,l}$\n",
+    "$$f =\\mathcal{M}+\\lambda \\mathcal{S} = \\frac1{2m} \\sum_{i,j} \\left(A_{ij}-\\frac{k_ik_j}{2m}\\right) \\sum_l x_{i,l}x_{j,l} + \\frac{1}{\\mathcal{P}}\\sum_l\\left(\\sum_i p_i x_{i,l}\\right)^2 $$\n",
+    "\n",
+    "to find $K$ self-sufficient microgrids. \n",
+    "\n",
+    "We can classically apply the [Leiden algorithm](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6435756/) to partition the network into $K$ microgrids, an NP-hard algorithm that scales exponentially with the size of the graph. Solved by dynamic programming in $\\mathcal{O}(n^3)$ time for $n$ nodes. \n",
+    "When formulating this problem on a quantum computer using QUBO, we can optimize on all nodes directly, and reduce the algorithm to run in polynomial time with the size of the graph, as we need to encode only the polynomial many edges. \n",
+    "Instead of formulating $KN$ binary variables $x_{i,l}$ and running the algorithm by incrementing $K$ by one from $K=2$, we can run the same algorithm with binary-greedy method. \n",
+    "\n",
+    "To do this, we continuously partition the grid into $K=2$ groups. This allows us to use just a single binary variable for each node $x_{i}$ to represent one of two groups, repeating the algorithm $\\log_2(\\max(K))$ times with $N$ nodes. Thus at each step we re-formulate the problem parts as follows:\n",
+    "\n",
+    "$$\\begin{aligned}\n",
+    "\\mathcal{M} &= \\frac1{2m} \\sum_{i,j} \\left(A_{ij}-\\frac{k_ik_j}{2m}\\right) \\left(x_{i}x_{j}+(1-x_i)(1-x_j)\\right) \n",
+    "\\\\ &= \\frac1{m} \\sum_{i\\neq j} \\left(A_{ij}-\\frac{k_ik_j}{2m}\\right) \\left(2x_{i}x_{j}-x_i-x_j+1\\right)\n",
+    "\\\\ \\mathcal{S} &= \\frac{1}{\\mathcal{P}}\\left[\\left(\\sum_i p_i x_{i}\\right)^2 + \\left(\\sum_i p_i (1-x_{i})\\right)^2\\right] \n",
+    "\\\\ &= 22\n",
+    "\\end{aligned}\n",
+    "$$\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
