--- a/notebooks/OSM_power.ipynb
+++ b/notebooks/OSM_power.ipynb
@@ -503,28 +503,181 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Convert to Pandapower\n",
+    "\n",
     "As for `osm_type`, power plants and substations are either closed ways or relations (that effectively function as a closed way). \n",
     "\n",
-    "Generators can be either a closed way (like a rectangle depicting a solar panel) or a node (like a wind turbine). \n",
+    "Generators can be either a closed way (like a rectangle depicting a solar panel) or a node (like a wind turbine) and are identified by the power key `generator` and `plant`. \n",
     "\n",
-    "Connections between stations of either line, minor_line, or cable are open ways spanned by towers, portals, pylons, and poles. \n",
+    "Power lines are identified by the power key `line`, `minor_line`, or `cable` and are open ways spanned by towers, portals, pylons, and poles. \n",
     "\n",
-    "And some transmission lines are connected additionally via a link, transformer, and switch.\n",
+    "Electrical substations are identified by the keys `substation`, `sub_station`, and `station`. \n",
     "\n",
-    "We want to convert power data into a `pandapower` network so that we can run subsequent analysis through python. We will follow a similar approach to Johannes Leimhofer when he made OpenGridMap in 2016. \n"
+    "And some transmission lines are connected additionally via a `link`, `transformer`, and `switch`.\n",
+    "\n",
+    "We want to convert OSM power data into a `pandapower` network so that we can run subsequent analysis through python. The main challenge here is identifying all of the components that intersect substations—which potentially includes generators, transformers, and switches alongside multiple transmission lines. Furthermore, sometimes the same line will connect multiple times to a substation. \n",
+    "\n",
+    "So we could write this ourselves, or we could rely on the `transnet-models` repository made by OpenGridMap in 2019. Indeed, writing this involves would involve copying some version of the `transnet/app` code, which can definitely be done and rewritten concisely. However, this would probably take a whole day of work, so let's just rely on the pre-built models that transnet gives. \n",
+    "\n",
+    "The `transnet-models` dataset hosts all inferred peer-to-peer (p2p) circuits found on open street maps up to 2019. A p2p circuit treats substations as nodes connected by transmission lines while ignoring intermediate components such as transformers and switches. \n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class '__main__.TransnetOut'>, {'california': california at linepath='california_lines.csv' and nodepath='california_nodes.csv'})\n",
+      "california has 361 lines and 336 nodes\n",
+      "defaultdict(<class '__main__.TransnetOut'>, {'california': california has 361 lines and 336 nodes})\n",
+      "\n",
+      "\n",
+      "nodes\n",
+      "        n_id   longitude   latitude        type                    voltage  \\\n",
+      "0   35656716 -122.148605  37.710544  substation               115000;12000   \n",
+      "1   33108052 -122.161080  37.847902  substation  230000;115000;13200;12000   \n",
+      "2  540298861 -122.214408  37.762991  substation          115000;12000;7200   \n",
+      "3  109355539 -121.557308  37.007268  substation                          0   \n",
+      "4   23805620 -121.744164  37.225577  substation                          0   \n",
+      "\n",
+      "   frequency                      name                    operator  \\\n",
+      "0        NaN  San Leandro U Substation      Pacific Gas & Electric   \n",
+      "1        NaN         Moraga Substation      Pacific Gas & Electric   \n",
+      "2        NaN      Oakland J Substation      Pacific Gas & Electric   \n",
+      "3        NaN                       NaN                         NaN   \n",
+      "4        NaN        Metcalf Substation  Pacific Gas & Electric Co.   \n",
+      "\n",
+      "   not_accurate  \n",
+      "0           NaN  \n",
+      "1           NaN  \n",
+      "2           NaN  \n",
+      "3           NaN  \n",
+      "4           NaN  \n",
+      "\n",
+      "\n",
+      "lines\n",
+      "   l_id  n_id_start   n_id_end  voltage  cables  type  frequency  \\\n",
+      "0     1    35656716   33108052   115000     6.0  line       60.0   \n",
+      "1     2    35656716  540298861   115000     NaN  line        NaN   \n",
+      "2     3   109355539   23805620   115000     6.0  line       60.0   \n",
+      "3     4    93288988  181914725   115000     6.0  line       60.0   \n",
+      "4     5    32217118  405561526   115000     6.0  line        NaN   \n",
+      "\n",
+      "                                            name                    operator  \\\n",
+      "0  -Moraga - San Leandro 115kV transmission line                         NaN   \n",
+      "1                       115 kV transmission line                        PG&E   \n",
+      "2                                            NaN  Pacific Gas & Electric Co.   \n",
+      "3                                            NaN                         NaN   \n",
+      "4                                            NaN                        PG&E   \n",
+      "\n",
+      "   length_m  r_ohm_km  x_ohm_km  c_nf_km  i_th_max_km not_accurate  \n",
+      "0   17616.0       NaN       NaN      NaN          NaN          Yes  \n",
+      "1   10609.0       NaN       NaN      NaN          NaN          NaN  \n",
+      "2   32833.0       NaN       NaN      NaN          NaN          Yes  \n",
+      "3   54159.0       NaN       NaN      NaN          NaN          NaN  \n",
+      "4   40116.0       NaN       NaN      NaN          NaN          Yes  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# we can download data from the transnet models and compare the two\n",
+    "import sys, os\n",
+    "import pandas as pd\n",
+    "pd.options.display.max_rows = 20\n",
+    "from glob import glob\n",
+    "from collections import defaultdict\n",
+    "# get data directory (make if not there)\n",
+    "cwd = os.getcwd()\n",
+    "transnet_dir = cwd + \"/../data/transnet/\"\n",
+    "if not os.path.exists(transnet_dir):\n",
+    "    os.makedirs(transnet_dir)\n",
+    "# download data\n",
+    "# match a name_lines.csv with a name_nodes.csv\n",
+    "class TransnetOut():\n",
+    "    def __init__(self, name='', linepath='', nodepath='', read=False):\n",
+    "        \"\"\" input paths are paths to .csv files downloaded from transnet \"\"\"\n",
+    "        self.name = name\n",
+    "        self.linepath = linepath\n",
+    "        self.nodepath = nodepath\n",
+    "        self.dataIsProcessed = False\n",
+    "        if read:\n",
+    "            self.read_data()\n",
+    "    \n",
+    "    def read_data(self, linepath='', nodepath=''):\n",
+    "        \"\"\" read the data from the csv files into pandas.Dataframes \"\"\"\n",
+    "        if not linepath: linepath = self.linepath\n",
+    "        if not nodepath: nodepath = self.nodepath\n",
+    "        self.lines = pd.read_csv(linepath)\n",
+    "        self.nodes = pd.read_csv(nodepath)\n",
+    "        self.dataIsProcessed = True\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        if self.dataIsProcessed:\n",
+    "            ret = f\"{self.name} has {len(self.lines)} lines and {len(self.nodes)} nodes\"\n",
+    "            return ret\n",
+    "        return f\"{self.name} at linepath='{self.linepath.split('/')[-1]}' and nodepath='{self.nodepath.split('/')[-1]}'\"\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return self.__str__()\n",
+    "\n",
+    "transnet_data = defaultdict(TransnetOut)\n",
+    "for path in glob(transnet_dir + \"*.csv\"):\n",
+    "    name = path.split('/')[-1]\n",
+    "    realname = '_'.join(name.split('_')[:-1])\n",
+    "    if 'lines' in name:\n",
+    "        transnet_data[realname].name = realname\n",
+    "        transnet_data[realname].linepath = path\n",
+    "    elif 'nodes' in name:\n",
+    "        transnet_data[realname].name = realname\n",
+    "        transnet_data[realname].nodepath = path\n",
+    "\n",
+    "print(transnet_data)\n",
+    "for t in transnet_data.values():\n",
+    "    t.read_data()\n",
+    "    print(t)\n",
+    "print(transnet_data)\n",
+    "\n",
+    "t_cal = transnet_data['california']\n",
+    "n = t_cal.nodes\n",
+    "l = t_cal.lines\n",
+    "print(\"\\n\\nnodes\")\n",
+    "print(t_cal.nodes.head())\n",
+    "print(\"\\n\\nlines\")\n",
+    "print(t_cal.lines.head())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "n_id                             33108052\n",
+       "longitude                      -122.16108\n",
+       "latitude                        37.847902\n",
+       "type                           substation\n",
+       "voltage         230000;115000;13200;12000\n",
+       "frequency                             NaN\n",
+       "name                    Moraga Substation\n",
+       "operator           Pacific Gas & Electric\n",
+       "not_accurate                          NaN\n",
+       "Name: 1, dtype: object"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.loc[1]"
+   ]
   }
  ],
  "metadata": {
