--- a/notebooks/microgrids.ipynb
+++ b/notebooks/microgrids.ipynb
@@ -28,7 +28,7 @@
     "In full, the optimization problem involves minimizing the following objective function over $KN$ variables $x_{i,l}$\n",
     "$$f =\\mathcal{M}+\\lambda \\mathcal{S} = \\frac1{2m} \\sum_{i,j} \\left(A_{ij}-\\frac{k_ik_j}{2m}\\right) \\sum_l x_{i,l}x_{j,l} + \\frac{1}{\\mathcal{P}}\\sum_l\\left(\\sum_i p_i x_{i,l}\\right)^2 $$\n",
     "\n",
-    "to find $K$ self-sufficient microgrids. \n",
+    "where $\\lambda$ is tuned to balance optimization between both modularity and self-sufficiency, to find $K$ self-sufficient microgrids. \n",
     "\n",
     "We can classically apply the [Leiden algorithm](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6435756/) to partition the network into $K$ microgrids, an NP-hard algorithm that scales exponentially with the size of the graph. Solved by dynamic programming in $\\mathcal{O}(n^3)$ time for $n$ nodes. \n",
     "When formulating this problem on a quantum computer using QUBO, we can optimize on all nodes directly, and reduce the algorithm to run in polynomial time with the size of the graph, as we need to encode only the polynomial many edges. \n",
@@ -40,7 +40,6 @@
     "\\mathcal{M} &= \\frac1{2m} \\sum_{i,j} \\left(A_{ij}-\\frac{k_ik_j}{2m}\\right) \\left(x_{i}x_{j}+(1-x_i)(1-x_j)\\right) \n",
     "\\\\ &= \\frac1{m} \\sum_{i\\neq j} \\left(A_{ij}-\\frac{k_ik_j}{2m}\\right) \\left(2x_{i}x_{j}-x_i-x_j+1\\right)\n",
     "\\\\ \\mathcal{S} &= \\frac{1}{\\mathcal{P}}\\left[\\left(\\sum_i p_i x_{i}\\right)^2 + \\left(\\sum_i p_i (1-x_{i})\\right)^2\\right] \n",
-    "\\\\ &= 22\n",
     "\\end{aligned}\n",
     "$$\n"
    ]
