--- a/notebooks/qubo_formulation.ipynb
+++ b/notebooks/qubo_formulation.ipynb
@@ -705,12 +705,12 @@
    "source": [
     "# Quantum Annealing\n",
     "\n",
-    "Relies on quantum adiabatic computation, a physical process in which quantum fluctuations act as \"thermal\" fluctutaions that explore the solution space. Quantum annealing relies on concepts present in adiabatic quantum computing, where eigenstates shift while transition dynamics are suppressed, but can still work on NISQ computers.\n",
+    "Relies on quantum adiabatic computation, a physical process in which quantum fluctuations act as \"thermal\" fluctuations that explore the solution space. Quantum annealing relies on concepts present in adiabatic quantum computing, where eigenstates shift while transition dynamics are suppressed, but can still work on NISQ computers.\n",
     "\n",
     "Adiabatically \"shift\" the initial Hamiltonian to a target Hamiltonian, so that \n",
     "$$H(t) = \\left(1-\\frac{t}{\\tau}\\right)H_0 + \\frac{t}{\\tau}H_p$$\n",
     "\n",
-    "D-Wave machines implement an Ising model on a quantum computer, where $h_i$ and $J_{ij}$ can be tuned. The problem Hamiltonian results in differently-weighted Pauli-z operations applied with the same form of the Ising model, which generates the following eigenenergies:\n",
+    "D-Wave machines implement an Ising model on a quantum computer, where $h_i$ and $J_{ij}$ can be tuned. The problem Hamiltonian results in differently-weighted Pauli-Z operations that have the same form of the Ising model (assuming $\\phi_i$ is binary), which generates the following eigenenergies:\n",
     "\n",
     "$$\\begin{align*}\n",
     "\\varepsilon_P &= \\sum_{i \\in V} h_i (-1)^{\\phi_i} + \\sum_{(i,j) \\in E} J_{ij} (-1)^{\\phi_i}(-1)^{\\phi_j} \\\\\n",
@@ -719,7 +719,10 @@
     "\n",
     "### Accessing Real D-Wave Systems\n",
     "\n",
-    "BQMs operate on logical qubits, which are mapped to physical qubits in a process known as the *minor embedding*. As qubits only have a certain amount of nearest-neighbor connections, sometimes qubits are made redundant and called a *chain* so that one qubit gains access to more neighbors. \n"
+    "BQMs operate on logical qubits, which are mapped to physical qubits in a process known as the *minor embedding*. As qubits only have a certain amount of nearest-neighbor connections, sometimes qubits are made redundant and called a *chain* so that one qubit gains access to more neighbors. \n",
+    "To access real dwave systems, we use `EmbeddingComposite(DWaveSampler)` as a sampler, which should be architecture-agnostic. This requires setting up your own Leap API key [here](https://docs.ocean.dwavesys.com/en/stable/overview/sapi.html). For simple problems, a classical `SimulatedAnnealingSampler` from `dimod` is sufficient.\n",
+    "\n",
+    "Below we implement a full travelling-salesman problem solution, using the d-wave `BQM` instance to directly encode the same QUBO problem as above."
    ]
   },
   {
