--- a/notebooks/wip.ipynb
+++ b/notebooks/wip.ipynb
@@ -151,7 +151,16 @@
     "print(t_cal.lines.head())\n",
     "\n",
     "def add_transnet_bus(net: aux.pandapowerNet, node: pd.Series|dict, separate_voltage=False) -> None:\n",
-    "    \"\"\" add a transnet substation to a pandapower network \"\"\"\n",
+    "    \"\"\" add a transnet substation to a pandapower network \n",
+    "    TODO:\n",
+    "    if separate_voltage, substations with multiple voltages are realistically treated by:\n",
+    "     - creating one long busbar for the highest voltage\n",
+    "     - for each lower voltage, creating a new small bus and connect it to the higher voltage bus\n",
+    "       via a transformer\n",
+    "     - keep track of the equivalences using a dict of \n",
+    "       {original_id: {highest: original_id, lower1: bus_id1, lower2: bus_id2, ...},\n",
+    "       {} ...}\n",
+    "    \"\"\"\n",
     "    voltage = node['voltage']  # string of voltages like \"115000;12000\"\n",
     "    if separate_voltage: \n",
     "        pass\n",
@@ -197,9 +206,12 @@
     "        start = line['n_id_start']\n",
     "        end = line['n_id_end']\n",
     "        # add line with standard type to ting\n",
-    "        assert isinstance(net['bus'], pd.DataFrame)\n",
-    "        if net['bus'].loc[start]['vn_kv'] == 0:\n",
-    "            net['bus'].iat(start, 'vn_kv') = line['voltage']\n",
+    "        if net['bus'].loc[start, 'vn_kv'] == 0:\n",
+    "            net['bus'].loc[start,'vn_kv'] = line['voltage']\n",
+    "        if net['bus'].loc[end, 'vn_kv'] == 0:\n",
+    "            net['bus'].loc[end,'vn_kv'] = line['voltage']\n",
+    "        if separate_voltage:\n",
+    "            pass\n",
     "        cables = line['cables'] if line['cables'] else 1\n",
     "        std_type = \"NAYY 4x150 SE\"\n",
     "        if line['r_ohm_km'] and line['x_ohm_km'] and line['c_nf_km']:\n",
