--- a/notebooks/wip.ipynb
+++ b/notebooks/wip.ipynb
@@ -162,17 +162,27 @@
     "       {} ...}\n",
     "    \"\"\"\n",
     "    voltage = node['voltage']  # string of voltages like \"115000;12000\"\n",
-    "    if separate_voltage: \n",
-    "        pass\n",
+    "    if ';' in voltage:  # get maximum voltage if multiple\n",
+    "        voltage = max(map(int,voltage.split(';')))\n",
     "    else:\n",
-    "        if ';' in voltage:\n",
-    "            voltage = voltage.split(';')[0]\n",
     "        voltage = int(voltage)\n",
     "    pp.create_bus(net, index=node['n_id'], name=node['name'], \n",
     "                  vn_kv=node['voltage'], transnet_type=node['type'],\n",
     "                  geodata=(node['latitude'], node['longitude']), type='b' )  #is busbar\n",
     "\n",
+    "def copy_bus_newV(net: aux.pandapowerNet, bus_id: int, new_voltage: float) -> int:\n",
+    "    \"\"\" copy a bus with a new voltage and return the new bus id \"\"\"\n",
+    "    bus = net['bus'].loc[bus_id].copy()\n",
+    "    bus['vn_kv'] = new_voltage\n",
+    "    # shift bus geodata by a tiny bit\n",
+    "    old_geo = net['bus_geodata'].loc[bus_id]\n",
+    "    bus['geodata'] = (old_geo['x']+0.005, old_geo['y'])\n",
+    "    new_id = pp.create_bus(net, **bus)\n",
+    "    return new_id\n",
+    "\n",
     "def add_transnet_gen(net: aux.pandapowerNet, node: pd.Series, p_mw=10) -> None:\n",
+    "    # add voltage-controlled PV node - we specify active power and voltage magnitude\n",
+    "    # if you want to specify only active + reactive power, use sgen instead\n",
     "    pp.create_gen(net, node['n_id'], p_mw=p_mw, vm_pu=1.0, name=node['name'], \n",
     "                  slack=False, type='unkown', controllable=True, \n",
     "                  max_p_mw=p_mw, min_p_mw=0, max_q_mvar=0.01, min_q_mvar=0)\n",
@@ -183,7 +193,6 @@
     "    - adds all nodes first\n",
     "       - substations with more than one voltage are added as one bus with the highest voltage \"\"\"\n",
     "    net = pp.create_empty_network()\n",
-    "    \n",
     "    # create all nodes\n",
     "    for i, node in nodes.iterrows():\n",
     "        add_transnet_bus(net, node, separate_voltage)\n",
@@ -197,21 +206,35 @@
     "            add_transnet_gen(net, node, 50)\n",
     "    \n",
     "    #  add all transmission lines\n",
+    "    multiV = defaultdict(dict)\n",
     "    for i, line in lines.iterrows():\n",
     "        # freq = line['frequency'] if line['frequency'] else 60.0\n",
     "        # don't care about type = line | cable\n",
     "        # don't care about freq = line['frequency'] if line['frequency'] else 60.0\n",
     "        # don't care about operator\n",
-    "        # don't care about 'not_accurate'\n",
+    "        V = line['voltage']\n",
     "        start = line['n_id_start']\n",
     "        end = line['n_id_end']\n",
-    "        # add line with standard type to ting\n",
-    "        if net['bus'].loc[start, 'vn_kv'] == 0:\n",
-    "            net['bus'].loc[start,'vn_kv'] = line['voltage']\n",
-    "        if net['bus'].loc[end, 'vn_kv'] == 0:\n",
-    "            net['bus'].loc[end,'vn_kv'] = line['voltage']\n",
-    "        if separate_voltage:\n",
-    "            pass\n",
+    "        # add line with standard type to ting if not already there\n",
+    "        for j in (start, end):\n",
+    "            # bus already has multiple voltages run through\n",
+    "            if j in multiV:\n",
+    "                if V in multiV[j]:\n",
+    "                    j = multiV[j][V]\n",
+    "                    continue\n",
+    "            # j = original index of bus\n",
+    "            if net['bus'].loc[j,'vn_kv'] < V:\n",
+    "                if separate_voltage:\n",
+    "                    multiV[j][V] = j\n",
+    "                    # bus had some old voltage, and may have connected lines\n",
+    "                    if net['bus'].loc[j,'vn_kv'] != 0:\n",
+    "                        # rearrange\n",
+    "                        lowerV = net['bus'].loc[j,'vn_kv']\n",
+    "                        # track the old bus index as the higher voltage bus\n",
+    "                        # make a new bus for the lower voltage by copying the old bus\n",
+    "                        multiV[j][lowerV] = copy_bus_newV(net, j, lowerV)\n",
+    "                net['bus'].loc[j,'vn_kv'] = V\n",
+    "\n",
     "        cables = line['cables'] if line['cables'] else 1\n",
     "        std_type = \"NAYY 4x150 SE\"\n",
     "        if line['r_ohm_km'] and line['x_ohm_km'] and line['c_nf_km']:\n",
